src/htdocs/css/_statusBar.scss
#statusBar {
  bottom: 0;
  height: 40px;
  left: 0;
  position: fixed;
  width: 100%;
  z-index: 1000;

  p {
    background-color: rgb(255, 255, 120);
    border-top: 1px solid #eaea87;
    color: #333;
    font-size: 20px;
    line-height: 1;
    margin: 0;
    min-height: 40px;
    padding: 10px 0;
    text-align: center;
    position: absolute;
    width: 100%;

    span {
      display: block;
      font-size: 14px;
    }

    &.error {
      background-color: rgb(223, 62, 62);
      border-color: rgb(195, 0, 0);
      color: #fff;
      padding: 3px 0;
    }

    &.initial {
      z-index: 9000;
    }
  }

  &.hide {
    display: none;
  }
}

